# teoremas

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Teorema_de_Whitney  environment.yml  pyproject.toml  requirements.txt
Alaoglu/: alaoglu_potencias_mersenne.py  readme.md
Apolonio/: Apolonio.py  readme.md
Arquimedes_sobre_esfera_e_cilindro/: esfera_e_cilindro.py  readme.md
Banach/: Banach.py  readme.md
Banach_Steinhaus/: banach_steinhaus_animation.py  readme.md
Brianchon/: brianchon.py  readme.md
Caratheodory/: Caratheodory.py  readme.md
Carmichael/: Numeros_de_Carmichael.py  readme.md
Casorati_Weierstrass/: Casorati–Weierstrass.py  readme.md
Cauchy/: Argumento_de_Cauchy.py  readme.md
Ceva/: ceva.py  readme.md
Desargues/: intervalos_desargues.py  readme.md
Descartes/: descartes.py  readme.md
Desigualdade_de_Kolmogorov/: Desigualdade_de_Kolmogorov.py  readme.md
Dini/: dini.py  readme.md
Egorov/: egorov_animacao.py  readme.md
Esfera_de_Gauss/: Esfera_de_Gauss.py  readme.md
Estimador_de_Completude_Intuicionista/: estimador_completude_kripke.py  readme.md
Euler_Poliedros/: readme.md  verificar_euler.py
Extensao_de_Kolmogorov/: Extensao_de_Kolmogorov.py  readme.md
Feuerbach/: feuerbach_model.py  readme.md
Geodesica/: geodesica.py  readme.md
Infinitude_dos_primos/: infinitude_primos_euclides.py  readme.md
Irracionalidade/: destacar_numero_irracional.py  readme.md
Jordan/: readme.md  teorema_jordan_animado.py
KolmogorovComplexity/: KolmogorovComplexity.py  readme.md
Kolmogorov_Convergente/: KolmogorovConvergente.py  readme.md
Kolmogorov_Sinai/: Kolmogorov_Sinai.py  readme.md
Laplace/: Laplace.py  readme.md
Laurent/: Laurent.py  readme.md
Lebesgue/: lebesgue_potencias2.py  readme.md
LeiFortedosGrandesNúmeros/: LeiFortedosGrandesNumeros.py  readme.md
Lei_dos_Grandes_Números_fraca_e_forte/: lei_dos_grandes_numeros.py  readme.md
Liouville/: Liouville.py  readme.md
Luzin/: animacao_mola_luzin.py  readme.md
Menelau/: menelau.py  readme.md
Montel/: montel_potencias_mersennes.py  readme.md
Morley/: readme.md  triangulo_morley.py
Pappus/: Pappus.py  readme.md
Parseval/: parseval_onda_quadrada.py  readme.md
(+237 files in other folders)
